create endpoint for events byspaces, tests and docs (#149)
create endpoint for events byspaces, tests and docs
