# app/routes/api/space.php
@@ -3,6 +3,7 @@
 declare(strict_types=1);
 
 use App\Controller\Api\SpaceApiController;
+use App\Controller\Api\EventApiController;
 use Symfony\Component\HttpFoundation\Request;
 
 return [
@@ -11,5 +12,8 @@ return [
     ],
     '/api/v2/spaces/{id}' => [
         Request::METHOD_GET => [SpaceApiController::class, 'getOne'],
+    ],
+    '/api/v2/spaces/{id}/events' => [
+        Request::METHOD_GET => [EventApiController::class, 'getEventsBySpace'],
     ],
 ];
